[package]
name = "balatro_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.28.1", default-features = false, features = ["event-stream"] }
itertools = "0.13.0"
futures = "0.3.28"
once_cell = "1.19.0"
rand = "0.8.5"
ratatui = "0.28.1"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.9"
color-eyre = "0.6.3"
human-panic = "2.0.1"
libc = "0.2.156"
better-panic = "0.3.0"
strip-ansi-escapes = "0.2.0"
strum_macros = "0.26.4"
strum = "0.26.3"
tracing = "0.1.40"
