[package]
name = "balatro_tui_widgets"
description = "UI widgets for Balatro CLI game"
documentation = "https://docs.rs/balatro_tui_widgets/latest/balatro_tui_widgets/"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

# Enable when overriding is added to cargo.
#
# [lints.clippy]
# module_name_repetitions = "allow"
# missing_errors_doc = "allow"
# pub_use = "allow"

[lib]
doctest = true
test = true

[dependencies]
balatro_tui_core = { path = "../balatro_tui_core", version = "0.1.1" }
bit-set = "0.8.0"
itertools = "0.13.0"
ratatui = "0.28.1"
thiserror = "1.0.64"

[dev-dependencies]
